openshift-spark/spark/spark-ui-proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-ui-proxy
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: spark-ui-proxy
  type: LoadBalancer
